# FireWorks

./: CMakeLists.txt
core/: firework.cpp  firework.h  fireworkshow.cpp  fireworkshow.h  rng.h
src/: main.cpp
